# src/app/modules/user/user.route.ts
@@ -3,6 +3,7 @@ import { UserControllers } from './user.controller';
 import { UserValidations } from './user.validation';
 import validateRequest from '../../middlewares/validateRequest';
 import { loginRateLimit } from '../../middlewares/rateLimit';
+import auth from '../../middlewares/auth';
 
 // public auth routes mounted at /auth
 const authRouter = express.Router();
@@ -20,6 +21,16 @@ authRouter.post(
   /* #swagger.responses[200] = { description: 'OK', schema: { $ref: '#/components/schemas/LoginResponse' } } */
   /* #swagger.responses[401] = { description: 'Invalid credentials', schema: { $ref: '#/components/schemas/ErrorResponse' } } */
   UserControllers.loginUser
+);
+
+authRouter.get(
+  '/me',
+  auth(),
+  /* #swagger.tags = ['Auth'] */
+  /* #swagger.summary = 'Get the logged-in user (with permissions)' */
+  /* #swagger.security = [{ bearerAuth: [] }] */
+  /* #swagger.responses[200] = { description: 'OK', schema: { $ref: '#/components/schemas/UserResponse' } } */
+  UserControllers.getCurrentUser
 );
 
 export const UserAuthRoutes = authRouter;
